--- a/src/views/template.ejs
+++ b/src/views/template.ejs
@@ -57,6 +57,29 @@
             flex: 100%;
             max-width: 100%;
         }
+    } 
+    ul.menuUl {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    li.menuLi {
+        float: left;
+    }
+
+    li.menuLi a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    li.menuLi a:hover {
+        background-color: #111;
     }
     </style>
 </head>
