--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,16 +1,49 @@
-<form method="POST"> 
-    <label for="">Email</label>
-    <input type="email" name="email">
-    <br>
-    <label for="">Password</label>
-    <input type="password" name="password">
-    <button>Sign Up</button>
-</form>
+<section class="hero">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-4 is-offset-4">
+                    <form class="box" action="" method="POST">
+                        <div class="field">
+                            <label class="label">Email</label>
+                            <div class="control has-icons-left">
+                                <input class="input is-primary" name="email" type="email" placeholder="Email">
+                                <span class="icon is-small is-left">
+                                    <i class="fa fa-envelope"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Password</label>
+                            <p class="control has-icons-left">
+                                <input class="input is-primary" name="password" type="password" placeholder="Password">
+                                <span class="icon is-small is-left">
+                                    <i class="fa fa-lock"></i>
+                                </span>
+                            </p>
+                        </div>
+                        <div class="field">
+                            <p class="control">
+                                <button class="button is-success"> SignUp </button>
+                            </p>
+                        </div>
+                        <div class="field">
+                            <p class="control">
+                                <fb:login-button size="large" scope="public_profile,email" onlogin=" myLoginSuccess()">SignUp with Facebook
+                                </fb:login-button>
+                            </p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
-<div class="fb-login-button" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false"
-data-use-continue-as="true"></div>
-<div id="fb-root"></div>
+
+
 
 
 <script>
@@ -26,35 +59,32 @@ data-use-continue-as="true"></div>
         //     console.log(response)
         // });
         FB.AppEvents.logPageView();
-        myCallbackFunc()
-        FB.Event.subscribe('auth.login', myCallbackFunc)
+        // myLoginSuccess()
+        FB.Event.subscribe('auth.login', myLoginSuccess)
 
     }
 
-    function myCallbackFunc(){
-        FB.getLoginStatus(response => {
-            console.log(response)
-            if (response.status === 'connected'){
-                console.log('login Ok') 
-                FB.api('/me?fields=name,id,email,first_name,last_name', res => { 
-                $.ajax({
+    function myLoginSuccess() {
+        FB.getLoginStatus(function (response) {
+            if (response.status == 'connected') {
+
+                FB.api('/me?fields=name,id,email,first_name,last_name', res => {
+                    $.ajax({
                         type: "POST",
                         url: '/signup',
                         data: res,
-                        success: function(data){
-                            console.log(data)
+                        success: function (data) {
+                            // console.log(data)
+                            window.location = '/signin'
                         }
-                    });
+                    })
                 })
-            } 
-            else{
-                console.log('Have mot logged in yet')
-            }
-            
+            } else
+                console.log('Have not logged in yet')
         })
-        //response.authResponse.userID
     }
-    
+
+
     (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) {
