--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -4,5 +4,6 @@
       <li class="menuLi"><a href="/signin">signin</a></li>
       <li class="menuLi"><a href="/signup">signup</a></li>
       <li class="menuLi"><a href="/upload">upload</a></li>
+      <li class="menuLi"><a href="/profile">profile</a></li>
     </ul>
 </div>
