--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -28,12 +28,12 @@
                                 <button class="button is-success"> SignUp </button>
                             </p>
                         </div>
-                        <div class="field">
+                        <!--<div class="field">
                             <p class="control">
                                 <fb:login-button size="large" scope="public_profile,email" onlogin=" myLoginSuccess()">SignUp with Facebook
                                 </fb:login-button>
                             </p>
-                        </div>
+                        </div>-->
                     </form>
                 </div>
             </div>
